force-app/main/default/objects/Case/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Brand object</description>
    <inlineHelpText>Related Event Brand</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases_With_Brand</relationshipName>
    <type>Lookup</type>
</CustomField>