force-app/main/default/objects/Case/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <formula>IF(ISBlank( Edition__r.Business_Hours__c ),Edition__r.Customer_Support_Team__r.Business_Hours__c,Edition__r.Business_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Hours</label>
    <type>Text</type>
</CustomField>