force-app/main/default/objects/Case/fields/Business_Hours_In_Turkish__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_In_Turkish__c</fullName>
    <description>Fetch business hours from either edition or customer service teams in turkish</description>
    <formula>IF( ISBLANK( Edition__r.Business_Hours_In_Turkish__c) ,  Edition__r.Customer_Support_Team__r.Business_Hours_In_Turkish__c , Edition__r.Business_Hours_In_Turkish__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Hours(In Turkish)</label>
    <type>Text</type>
</CustomField>