force-app/main/default/objects/Case/fields/Case_Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_in_Days__c</fullName>
    <description>Elapsed time from Case creation in Days</description>
    <formula>FLOOR( Case_Age_in_Hours__c /24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Elapsed time from Case creation in Days</inlineHelpText>
    <label>Case Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>