force-app/main/default/objects/Case/fields/Case_Age_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_in_Hours__c</fullName>
    <description>Elapsed time from Case creation in Hours</description>
    <formula>IF((ISPICKVAL( Status , &apos;On Hold&apos;) || ISPICKVAL( Status , &apos;Closure Confirmation&apos;)|| ISPICKVAL( Status , &apos;Closed&apos;) ) ,Previous_SLA__c ,IF((ISNULL(SLA_Start_Date__c)|| ISBLANK(SLA_Start_Date__c)) ,(NOW() - CreatedDate)*24,Previous_SLA__c +((NOW() - SLA_Start_Date__c)*24)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Elapsed time from Case creation in Hours</inlineHelpText>
    <label>Case Age in Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>