force-app/main/default/objects/Case/fields/Category_1__c.field-meta.xml
<CustomField>
    <fullName>Category_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will consist Level 1 Categories</description>
    <label>Category 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case_Category__c.Level__c</field>
            <operation>equals</operation>
            <value>L1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Category__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>