force-app/main/default/objects/Case/fields/Category_2__c.field-meta.xml
<CustomField>
    <fullName>Category_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consist level 2 Categories</description>
    <label>Category 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case_Category__c.Level__c</field>
            <operation>equals</operation>
            <value>L2</value>
        </filterItems>
        <filterItems>
            <field>Case_Category__c.Parent_Category__c</field>
            <operation>equals</operation>
            <valueField>$Source.Category_1__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Category__c</referenceTo>
    <relationshipLabel>Cases (Sub Category 1)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>