force-app/main/default/objects/Case/fields/Category_3__c.field-meta.xml
<CustomField>
    <fullName>Category_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consist Level 3 Categories</description>
    <label>Category 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case_Category__c.Level__c</field>
            <operation>equals</operation>
            <value>L3</value>
        </filterItems>
        <filterItems>
            <field>Case_Category__c.Parent_Category__c</field>
            <operation>equals</operation>
            <valueField>$Source.Category_2__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case_Category__c</referenceTo>
    <relationshipLabel>Cases (Category 3)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>