force-app/main/default/objects/Case/fields/Closure_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Closure_Confirmation__c</fullName>
    <description>Date case was last put to Closure Confirmation</description>
    <label>Closure Confirmation Date</label>
    <type>Date</type>
</CustomField>