force-app/main/default/objects/Case/fields/CS_Parm_1__c.field-meta.xml
<CustomField>
    <fullName>CS_Parm_1__c</fullName>
    <formula>Edition__r.CS_Parm_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Parm 1</label>
    <type>Text</type>
</CustomField>