force-app/main/default/objects/Case/fields/CS_Team__c.field-meta.xml
<CustomField>
    <fullName>CS_Team__c</fullName>
    <label>CS Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LNDN Team</fullName>
            </value>
            <value>
                <fullName>AMS Team</fullName>
            </value>
            <value>
                <fullName>CAIRO Team</fullName>
            </value>
            <value>
                <fullName>SAUDI Team</fullName>
            </value>
            <value>
                <fullName>DUBAI Team</fullName>
            </value>
            <value>
                <fullName>Turkey Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>