force-app/main/default/objects/Case/fields/Customer_Services_Team__c.field-meta.xml
<CustomField>
    <fullName>Customer_Services_Team__c</fullName>
    <formula>IF(ISBLANK(Edition__r.Customer_Support_Team__r.Name),Brand__r.Customer_Support_Team__r.Name , Edition__r.Customer_Support_Team__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Services Team</label>
    <type>Text</type>
</CustomField>