force-app/main/default/objects/Case/fields/Delete_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delete_Request_Reason__c</fullName>
    <inlineHelpText>Please choose a reason of marking this Case for Deletion</inlineHelpText>
    <label>Delete Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>