force-app/main/default/objects/Case/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Edition Object</description>
    <inlineHelpText>Related Event Edition</inlineHelpText>
    <label>Edition</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Edition__c.Edition_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>