force-app/main/default/objects/Case/fields/Edition_Code__c.field-meta.xml
<CustomField>
    <fullName>Edition_Code__c</fullName>
    <description>Event Edition Code - autopopulate when case created</description>
    <inlineHelpText>Related Event Edition Code</inlineHelpText>
    <label>Edition Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>