force-app/main/default/objects/Case/fields/Edition_Name__c.field-meta.xml
<CustomField>
    <fullName>Edition_Name__c</fullName>
    <formula>Edition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edition Name</label>
    <type>Text</type>
</CustomField>