force-app/main/default/objects/Case/fields/Egypt_SalesOps_Mail__c.field-meta.xml
<CustomField>
    <fullName>Egypt_SalesOps_Mail__c</fullName>
    <formula>IF(  CONTAINS( $Label.Egypt_SalesOps_Mail ,  Source_Email_Address__c ) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Egypt_SalesOps_Mail</label>
    <type>Checkbox</type>
</CustomField>