force-app/main/default/objects/Case/fields/Event_Logo__c.field-meta.xml
<CustomField>
    <fullName>Event_Logo__c</fullName>
    <formula>Edition__r.PDF_Logo_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Logo</label>
    <type>Text</type>
</CustomField>