force-app/main/default/objects/Case/fields/Event_Website__c.field-meta.xml
<CustomField>
    <fullName>Event_Website__c</fullName>
    <formula>Edition__r.Edition_Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Website</label>
    <type>Text</type>
</CustomField>