force-app/main/default/objects/Case/fields/Hotline_Number__c.field-meta.xml
<CustomField>
    <fullName>Hotline_Number__c</fullName>
    <formula>IF(ISBlank( Edition__r.Hotline_Number__c ),Edition__r.Customer_Support_Team__r.Hotline_Number__c,Edition__r.Hotline_Number__c)</formula>
    <label>Hotline Number</label>
    <type>Text</type>
</CustomField>