force-app/main/default/objects/Case/fields/Informa_Logo__c.field-meta.xml
<CustomField>
    <fullName>Informa_Logo__c</fullName>
    <formula>Edition__r.Informa_log_url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informa Logo</label>
    <type>Text</type>
</CustomField>