force-app/main/default/objects/Case/fields/Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_URL__c</fullName>
    <label>Opportunity URL</label>
    <type>Url</type>
</CustomField>