force-app/main/default/objects/Case/fields/Phone_Icon__c.field-meta.xml
<CustomField>
    <fullName>Phone_Icon__c</fullName>
    <formula>$Label.Phone_Icon_URL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Icon</label>
    <type>Text</type>
</CustomField>