force-app/main/default/objects/Case/fields/Previous_SLA__c.field-meta.xml
<CustomField>
    <fullName>Previous_SLA__c</fullName>
    <description>This field is used for storing the previous SLA  and is updated when case status is changed other than New or escalated.</description>
    <label>Previous SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>