force-app/main/default/objects/Case/fields/Sales_Ops_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Business_Hours__c</fullName>
    <description>This field used in email template to populate working hours for Sales Ops cases.</description>
    <formula>IF(ISBLANK( Brand__c ),&apos;&apos;, Brand__r.Sales_Ops_Business_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Ops Business Hours</label>
    <type>Text</type>
</CustomField>