force-app/main/default/objects/Case/fields/Sent_Case_Assignment_Email__c.field-meta.xml
<CustomField>
    <fullName>Sent_Case_Assignment_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in Flow to track if the email is sent to customer and need not send again even if any of the field changes again</description>
    <label>Sent Case Assignment Email</label>
    <type>Checkbox</type>
</CustomField>