force-app/main/default/objects/Case/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Series Object</description>
    <inlineHelpText>Related Event Series</inlineHelpText>
    <label>Series</label>
    <referenceTo>Series__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases_with_Series</relationshipName>
    <type>Lookup</type>
</CustomField>