force-app/main/default/objects/Case/fields/Signature_Address__c.field-meta.xml
<CustomField>
    <fullName>Signature_Address__c</fullName>
    <formula>Edition__r.Customer_Support_Team__r.Signature_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Address</label>
    <type>Text</type>
</CustomField>