force-app/main/default/objects/Case/fields/SLA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Start_Date__c</fullName>
    <description>This field is used for calculation of SLA and is updated when case status is changed to New or escalated.</description>
    <label>SLA Start Date</label>
    <type>DateTime</type>
</CustomField>