force-app/main/default/objects/Case/fields/Source_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Source_Email_Address__c</fullName>
    <label>Source Email Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>