force-app/main/default/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>Depended picklist which depends upon case status field</description>
    <inlineHelpText>Applicable for &quot;On Hold&quot; Status only</inlineHelpText>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting: Brand</fullName>
            </value>
            <value>
                <fullName>Awaiting: Content</fullName>
            </value>
            <value>
                <fullName>Awaiting: Customer</fullName>
            </value>
            <value>
                <fullName>Awaiting: Customer Service</fullName>
            </value>
            <value>
                <fullName>Awaiting: Digital</fullName>
            </value>
            <value>
                <fullName>Awaiting: Finance</fullName>
            </value>
            <value>
                <fullName>Awaiting: ITSS</fullName>
            </value>
            <value>
                <fullName>Awaiting: Marketing</fullName>
            </value>
            <value>
                <fullName>Awaiting: Operations</fullName>
            </value>
            <value>
                <fullName>Awaiting: Sales</fullName>
            </value>
            <value>
                <fullName>Awaiting: Sales Ops</fullName>
            </value>
            <value>
                <fullName>Awaiting: Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>