force-app/main/default/objects/Case/fields/Subject_for_Missed_Chat__c.field-meta.xml
<CustomField>
    <fullName>Subject_for_Missed_Chat__c</fullName>
    <formula>IF( ISPICKVAL(Edition__r.Additional_Language__c, &apos;Turkish&apos;),&apos;Cevapsız Sohbet: Vaka Numaraniz &apos; &amp;CaseNumber,&apos;Chat Missed: Your Case Number Is &apos; &amp;CaseNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject for Missed Chat</label>
    <type>Text</type>
</CustomField>