force-app/main/default/objects/Case/fields/Subject_for_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>Subject_for_Welcome_Email__c</fullName>
    <description>Used in Welcome Email Template</description>
    <formula>IF( ISPICKVAL(Edition__r.Additional_Language__c, &apos;Turkish&apos;),&apos;Talebiniz alinmistir : Talep Numaraniz &apos; &amp;CaseNumber,&apos;Case Received: Your Case Number Is &apos; &amp;CaseNumber)</formula>
    <label>Subject for Welcome Email</label>
    <type>Text</type>
</CustomField>