force-app/main/default/objects/Case/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <formula>Edition__r.Support_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Email</label>
    <type>Text</type>
</CustomField>