force-app/main/default/objects/Case/fields/Whatsapp_Icon__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Icon__c</fullName>
    <formula>$Label.Whatsapp_Icon_URL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Whatsapp Icon</label>
    <type>Text</type>
</CustomField>