force-app/main/default/objects/Case/fields/Whatsapp_Number__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Number__c</fullName>
    <formula>IF(
	ISBlank(  Edition__r.Whatsapp_Number__c  ),
	Edition__r.Customer_Support_Team__r.Whatsapp_Number__c ,
	Edition__r.Whatsapp_Number__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Whatsapp Number</label>
    <type>Text</type>
</CustomField>