force-app/main/default/objects/Case/validationRules/Case_Validation_for_Payment_Portal_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Validation_for_Payment_Portal_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() , SuppliedEmail == &apos;payment-portal@informa.com&apos; , $Setup.Application_Bypass__c.Bypass_Validation_Rules__c = False)</errorConditionFormula>
    <errorMessage>Case creation is not allowed by Payment Portal email</errorMessage>
</ValidationRule>