force-app/main/default/objects/Case/validationRules/Select_Contact_whose_Account_is_choosen.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Contact_whose_Account_is_choosen</fullName>
    <active>false</active>
    <errorConditionFormula>(AccountId  &lt;&gt; &apos;&apos; &amp;&amp; ContactId  &lt;&gt; &apos;&apos; ) &amp;&amp; (Contact.AccountId  &lt;&gt;  AccountId)</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Please Choose Contact belongs to Account you have chosen</errorMessage>
</ValidationRule>