force-app/main/default/objects/Case/validationRules/Select_Sub_Status_only_when_On_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Sub_Status_only_when_On_Hold</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status , &apos;On Hold&apos;) &amp;&amp; ISPICKVAL(Sub_Status__c ,&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Sub_Status__c</errorDisplayField>
    <errorMessage>You have to choose sub status when case status is On Hold</errorMessage>
</ValidationRule>