force-app/main/default/objects/Case/validationRules/Validate_fields_on_Case_Closure.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_fields_on_Case_Closure</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISPICKVAL(Status, &apos;Closed&apos;),ISPICKVAL(Status, &apos;Closure Confirmation&apos;)) &amp;&amp;  (AccountId  = &apos;&apos;  ||  ContactId  = &apos;&apos; ||  Edition__c = &apos;&apos; ||  Category_1__c = &apos;&apos; ||  Category_2__c = &apos;&apos; ||  Category_3__c = &apos;&apos; ) &amp;&amp; ISPICKVAL( Delete_Request_Reason__c ,&apos;&apos;)</errorConditionFormula>
    <errorMessage>Account, Contact, Edition, Categories should not be blank</errorMessage>
</ValidationRule>