force-app/main/default/objects/Case/listViews/All_Cases.listView-meta.xml
<ListView>
    <fullName>All_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Series__c</columns>
    <columns>Edition__c</columns>
    <columns>Brand__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <columns>Delete_Request_Reason__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.REASON</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>