force-app/main/default/objects/Case/listViews/AMS_CS_Queue_Case_Case.listView-meta.xml
<ListView>
    <fullName>AMS_CS_Queue_Case_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Approved_for_Deletion__c</columns>
    <columns>Delete_Request_Reason__c</columns>
    <filterScope>Queue</filterScope>
    <label>AMS CS Queue Case</label>
    <queue>AMS_CS_Queue_Case</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>