force-app/main/default/objects/Case/listViews/ATTN_Supervisorss.listView-meta.xml
<ListView>
    <fullName>ATTN_Supervisorss</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Edition__c</columns>
    <columns>Brand__c</columns>
    <columns>Approved_for_Deletion__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Source_Email_Address__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Delete_Request_Reason__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>ATTN: Supervisorss</label>
    <queue>Supervisors</queue>
</ListView>