force-app/main/default/objects/Case/listViews/Cairo_CS_Queue_Case_Case.listView-meta.xml
<ListView>
    <fullName>Cairo_CS_Queue_Case_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Edition__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Approved_for_Deletion__c</columns>
    <columns>Delete_Request_Reason__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Cairo CS Queue Case</label>
    <queue>Cairo_CS_Queue_Case</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>