force-app/main/default/objects/Case/listViews/Cairo_CS_Team_Case.listView-meta.xml
<ListView>
    <fullName>Cairo_CS_Team_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Edition__c</columns>
    <columns>Brand__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Source_Email_Address__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Approved_for_Deletion__c</columns>
    <columns>Delete_Request_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Services_Team__c</field>
        <operation>contains</operation>
        <value>Cairo</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,On Hold,Escalated,ReOpened</value>
    </filters>
    <filters>
        <field>Delete_Request_Reason__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Support_Type__c</field>
        <operation>equals</operation>
    </filters>
    <label>Cairo CS Queue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>