force-app/main/default/objects/Case/listViews/Cityscape_SalesOps_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Cityscape_SalesOps_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cityscape SalesOps Queue</label>
    <queue>Cityscape_SalesOps_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>