force-app/main/default/objects/Case/listViews/Cruise_Sales_Ops_Case.listView-meta.xml
<ListView>
    <fullName>Cruise_Sales_Ops_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cruise SalesOps Queue</label>
    <queue>Cruise_SalesOps_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>