force-app/main/default/objects/Case/listViews/CS_Team_Amsterdam_Case.listView-meta.xml
<ListView>
    <fullName>CS_Team_Amsterdam_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Edition__c</columns>
    <columns>Brand__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Approved_for_Deletion__c</columns>
    <columns>Delete_Request_Reason__c</columns>
    <filterScope>Queue</filterScope>
    <label>AMS CS Queue</label>
    <queue>AMS_CS_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>