force-app/main/default/objects/Case/listViews/Decorex_Salesops_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Decorex_Salesops_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Delete_Request_Reason__c</columns>
    <columns>Approved_for_Deletion__c</columns>
    <filterScope>Queue</filterScope>
    <label>Decorex Salesops Queue</label>
    <language>en_US</language>
    <queue>Decorex_Salesops_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>