force-app/main/default/objects/Case/listViews/Design_SalesOps_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Design_SalesOps_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>KBB SalesOps Queue</label>
    <queue>Design_SalesOps_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>